fix(transcription): increase max-height of transcription data to improve visibility

--- a/app/fiches/static/fiches/css/transcription-layout.css
+++ b/app/fiches/static/fiches/css/transcription-layout.css
@@ -181,7 +181,7 @@ h2.transcription {
 }
 
 .transcription-content #transcription-data {
-	max-height: 600px;
+	max-height: 655px;
 	overflow-y: auto;
 	overflow-x: hidden;
 }
